[tool.poetry]
name = "pkt-trail-agent"
version = "0.0.1"
description = "Agent for the Packet Trail Application"
authors = ["Abhijit Gadgil <gabhijit@hyphenos.io>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.5"
pkt-trail-api-schema = {git = "https://github.com/hyphenOs/pkt-trail-api-schema"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
