[tool.poetry]
name = "pkt-trail-agent"
version = "0.0.1"
description = "Agent for the Packet Trail Application"
authors = ["Abhijit Gadgil <gabhijit@hyphenos.io>"]
license = "GPL-3.0-or-later"

packages = [
	{ include = "pkttrail" }]


[tool.poetry.dependencies]
python = "^3.5"

# When pushed to origin - The following line should be uncommented
pkt-trail-api-schema = {git = "https://github.com/hyphenOs/pkt-trail-api-schema"}
# Use following path during development.
#pkt-trail-api-schema = { path = "../pkt-trail-api-schema/"}

requests = "^2.24.0"
psutil = "^5.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
